--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -13,7 +13,7 @@ import Link from '@docusaurus/Link';
       💡 Cloud & Data Platform Engineer │ 🖥️ Backend (Java/Kotlin, Spring Boot) │ ☸️ Kubernetes │ ☁️ Azure │ 🔧 DevOps │ 🧩 GitOps
     </p>
     <div className="buttons" style={{display: 'flex', gap: '0.75rem', flexWrap: 'wrap'}}>
-      <Link className="button button--secondary button--lg" to="/docs/about">About Me</Link>
+      <Link className="button button--secondary button--lg" to="/about">About Me</Link>
       <Link className="button button--outline button--lg" to="/blog">Blog</Link>
       <Link className="button button--outline button--lg" to="mailto:brigitte_boehm@outlook.de">Kontakt</Link>
     </div>
@@ -112,7 +112,7 @@ import Link from '@docusaurus/Link';
     <p style={{marginBottom: '1rem'}}>Ich freue mich über Austausch, Kollaboration und neue Möglichkeiten.</p>
     <div className="buttons" style={{display: 'flex', gap: '0.75rem', justifyContent: 'center', flexWrap: 'wrap'}}>
       <Link className="button button--primary" to="mailto:brigitte_boehm@outlook.de">Kontakt aufnehmen</Link>
-      <Link className="button button--secondary" to="/docs/about">Mehr über mich</Link>
+      <Link className="button button--secondary" to="/about">Mehr über mich</Link>
     </div>
   </div>
 </section>
