--- a/i18n/en/docusaurus-plugin-content-blog/2025-02-10-api-first.md
+++ b/i18n/en/docusaurus-plugin-content-blog/2025-02-10-api-first.md
@@ -13,7 +13,7 @@ import Admonition from '@theme/Admonition';
 Microservices should offer **consistent interfaces** – regardless of the programming language.
 API-first means: **first the OpenAPI schema**, then code, documentation, and clients.
 <!--truncate-->
-This prevents API definitions from becoming outdated or being added as an “afterthought.”
+This prevents API definitions from becoming outdated or being added as an “afterthought."
 
 ---
 
@@ -73,7 +73,7 @@ openApiGenerate {
 ### 2. Use DTOs strictly
 
 * DTOs from `model` are **transport objects**—not business entities.
-* Avoid “smart” logic in DTOs, keep them flat.
+* Avoid “smart" logic in DTOs, keep them flat.
 
 ### 3. Versioning & backward compatibility
 
