--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -3,7 +3,6 @@ title: About
 description: Über mich
 ---
 
-
 import Link from '@docusaurus/Link';
 
 {/* Hero with claim */}
@@ -51,7 +50,7 @@ Außerdem reise ich gerne, besonders in den **skandinavischen Raum**, und entdec
 # 🚀 Looking for Opportunities
 
 Ich bin offen für Rollen im Bereich **Backend‑Entwicklung und Cloud‑Plattformen**, in denen ich Erfahrung mit **Java, Kotlin, Spring Boot, Kubernetes und Azure** einbringen kann.
-Wenn das spannend klingt – **let’s talk!**
+Wenn das spannend klingt – **let's talk!**
 
 - 📧 <Link to="mailto:brigitte_boehm@outlook.de">Kontakt per Mail</Link>  
 - 💼 [LinkedIn](https://www.linkedin.com/in/brigitte-boehm-34b7a025/)
