--- a/i18n/en/docusaurus-plugin-content-pages/index.mdx
+++ b/i18n/en/docusaurus-plugin-content-pages/index.mdx
@@ -8,14 +8,14 @@ import Link from '@docusaurus/Link';
 {/* HERO */}
 <div className="hero hero--primary" style={{padding: '3rem 0'}}>
   <div className="container">
-    <h1 className="hero__title" style={{marginBottom: '0.5rem'}}>Hi, ich bin <strong>Brigitte</strong></h1>
+    <h1 className="hero__title" style={{marginBottom: '0.5rem'}}>Hi, I am <strong>Brigitte</strong></h1>
     <p className="hero__subtitle" style={{fontSize: '1.05rem', lineHeight: 1.6}}>
       💡 Cloud & Data Platform Engineer │ 🖥️ Backend (Java/Kotlin, Spring Boot) │ ☸️ Kubernetes │ ☁️ Azure │ 🔧 DevOps │ 🧩 GitOps
     </p>
     <div className="buttons" style={{display: 'flex', gap: '0.75rem', flexWrap: 'wrap'}}>
       <Link className="button button--secondary button--lg" to="/about">About Me</Link>
       <Link className="button button--outline button--lg" to="/blog">Blog</Link>
-      <Link className="button button--outline button--lg" to="mailto:brigitte_boehm@outlook.de">Kontakt</Link>
+      <Link className="button button--outline button--lg" to="mailto:brigitte_boehm@outlook.de">Contact</Link>
     </div>
   </div>
 </div>
@@ -25,33 +25,33 @@ import Link from '@docusaurus/Link';
   <div className="row">
     <div className="col col--4">
       <div className="card">
-        <div className="card__header"><h3>Was ich mache</h3></div>
+        <div className="card__header"><h3>What I do</h3></div>
         <div className="card__body">
           <ul>
             <li>Backend in <strong>Java/Kotlin (Spring Boot)</strong></li>
-            <li>Cloud- & Datenplattformen auf <strong>Azure</strong></li>
-            <li>Container & Orchestrierung mit <strong>Kubernetes</strong></li>
+            <li>Cloud- & Data Platforms on <strong>Azure</strong></li>
+            <li>Container & Orchestration with <strong>Kubernetes</strong></li>
           </ul>
         </div>
       </div>
     </div>
     <div className="col col--4">
       <div className="card">
-        <div className="card__header"><h3>Woran ich glaube</h3></div>
+        <div className="card__header"><h3>What I believe in</h3></div>
         <div className="card__body">
           <ul>
-            <li><strong>Open Source first</strong> & klare Architekturen</li>
-            <li>Skalierbarkeit, Sicherheit, <em>Cost Awareness</em></li>
-            <li>Zusammenarbeit & Enablement für Teams</li>
+            <li><strong>Open Source first</strong> & clear architectures</li>
+            <li>Scalability, security, <em>cost awareness</em></li>
+            <li>Collaboration & Enablement for Teams</li>
           </ul>
         </div>
       </div>
     </div>
     <div className="col col--4">
       <div className="card">
-        <div className="card__header"><h3>Was ich suche</h3></div>
+        <div className="card__header"><h3>What I'm looking for</h3></div>
         <div className="card__body">
-          <p>Ich bin offen für Rollen in <strong>Backend</strong> & <strong>Cloud-Plattformen</strong> – gerne mit Kotlin, Kubernetes & Azure.</p>
+          <p>I am open to roles in <strong>backend</strong> & <strong>cloud platforms</strong> – preferably with Kotlin, Kubernetes & Azure.</p>
           <Link className="button button--sm button--primary" to="mailto:brigitte_boehm@outlook.de">Let's talk</Link>
         </div>
       </div>
@@ -63,15 +63,15 @@ import Link from '@docusaurus/Link';
 <section className="container" style={{paddingBottom: '2.5rem'}}>
   <div className="row">
     <div className="col col--8">
-      <h2 style={{marginBottom: '1rem'}}>Aktuelle Artikel</h2>
+      <h2 style={{marginBottom: ‘1rem'}}>Latest articles</h2>
       <p>
-        Lies meinen Blog über Kotlin, Kubernetes, Azure und Datenplattformen. 
-        <Link to="/blog" style={{marginLeft: 8}}>Alle Artikel →</Link>
+        Read my blog about Kotlin, Kubernetes, Azure, and data platforms. 
+        <Link to="/blog" style={{marginLeft: 8}}>All articles →</Link>
       </p>
       {/*
-        Hinweis: Für eine automatische Vorschau kannst du ein eigenes Mini-Listing pflegen
-        (z. B. per MDX-Partial) oder ein Custom-Theme-Component schreiben, das die Blog-Metadaten rendert.
-        Die Standard-/blog-Seite bleibt der zentrale Einstieg.
+        Note: For an automatic preview, you can maintain your own mini listing
+        (e.g., via MDX partial) or write a custom theme component that renders the blog metadata.
+        The standard/blog page remains the central entry point.
       */}
       <div className="row">
         <div className="col col--6">
@@ -83,16 +83,16 @@ import Link from '@docusaurus/Link';
         </div>
         <div className="col col--6">
           <div className="card">
-            <div className="card__header"><h4>☸️ GitOps mit FluxCD & Argo Workflows</h4></div>
-            <div className="card__body"><p>So orchestriere ich komplexe Datenpipelines in Kubernetes.</p></div>
-            <div className="card__footer"><Link to="/blog">Weiterlesen</Link></div>
+            <div className="card__header"><h4>☸️ GitOps with FluxCD & Argo Workflows</h4></div>
+            <div className="card__body"><p>This is how I orchestrate complex data pipelines in Kubernetes.</p></div>
+            <div className="card__footer"><Link to="/blog">Read more</Link></div>
           </div>
         </div>
       </div>
     </div>
     <div className="col col--4">
       <div className="card">
-        <div className="card__header"><h3>Kontakt</h3></div>
+        <div className="card__header"><h3>Contact</h3></div>
         <div className="card__body">
           <ul>
             <li>📧 <Link to="mailto:brigitte_boehm@outlook.de">E‑Mail</Link></li>
@@ -108,11 +108,11 @@ import Link from '@docusaurus/Link';
 {/* CTA FOOTER */}
 <section className="hero" style={{padding: '2.25rem 0', background: 'var(--ifm-background-surface-color)'}}>
   <div className="container" style={{textAlign: 'center'}}>
-    <h3 style={{marginBottom: '0.5rem'}}>Bereit, die nächste Cloud-Lösung zu bauen?</h3>
-    <p style={{marginBottom: '1rem'}}>Ich freue mich über Austausch, Kollaboration und neue Möglichkeiten.</p>
-    <div className="buttons" style={{display: 'flex', gap: '0.75rem', justifyContent: 'center', flexWrap: 'wrap'}}>
-      <Link className="button button--primary" to="mailto:brigitte_boehm@outlook.de">Kontakt aufnehmen</Link>
-      <Link className="button button--secondary" to="/about">Mehr über mich</Link>
+    <h3 style={{marginBottom: ‘0.5rem'}}>Ready to build the next cloud solution?</h3>
+    <p style={{marginBottom: ‘1rem'}}>I look forward to exchanging ideas, collaborating, and exploring new opportunities.</p>
+    <div className="buttons" style={{display: ‘flex', gap: ‘0.75rem', justifyContent: ‘center', flexWrap: ‘wrap'}}>
+      <Link className="button button--primary" to="mailto:brigitte_boehm@outlook.de">Get in touch</Link>
+      <Link className="button button--secondary" to="/about">More about me</Link>
     </div>
   </div>
 </section>
