--- a/i18n/en/docusaurus-plugin-content-pages/index.mdx
+++ b/i18n/en/docusaurus-plugin-content-pages/index.mdx
@@ -52,7 +52,7 @@ import Link from '@docusaurus/Link';
         <div className="card__header"><h3>What I'm looking for</h3></div>
         <div className="card__body">
           <p>I am open to roles in <strong>backend</strong> & <strong>cloud platforms</strong> – preferably with Kotlin, Kubernetes & Azure.</p>
-          <Link className="button button--sm button--primary" to="mailto:brigitte_boehm@outlook.de">Let's talk</Link>
+          <Link className="button button--sm button--primary" to="mailto:brigitte_boehm@outlook.de">Let’s talk</Link>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@ import Link from '@docusaurus/Link';
 <section className="container" style={{paddingBottom: '2.5rem'}}>
   <div className="row">
     <div className="col col--8">
-      <h2 style={{marginBottom: ‘1rem'}}>Latest articles</h2>
+      <h2 style={{marginBottom: '1rem'}}>Latest articles</h2>
       <p>
         Read my blog about Kotlin, Kubernetes, Azure, and data platforms. 
         <Link to="/blog" style={{marginLeft: 8}}>All articles →</Link>
@@ -95,9 +95,9 @@ import Link from '@docusaurus/Link';
         <div className="card__header"><h3>Contact</h3></div>
         <div className="card__body">
           <ul>
-            <li>📧 <Link to="mailto:brigitte_boehm@outlook.de">E‑Mail</Link></li>
-            <li>💼 <Link to="https://www.linkedin.com/in/brigitte-boehm-34b7a025/">LinkedIn</Link></li>
-            <li>🐙 <Link to="https://github.com/bri-b-dev">GitHub</Link></li>
+            <li>📧 <Link to="mailto:brigitte_boehm@outlook.de">E-Mail</Link></li>
+            <li>💼 <Link href="https://www.linkedin.com/in/brigitte-boehm-34b7a025/">LinkedIn</Link></li>
+            <li>🐙 <Link href="https://github.com/bri-b-dev">GitHub</Link></li>
           </ul>
         </div>
       </div>
@@ -108,9 +108,9 @@ import Link from '@docusaurus/Link';
 {/* CTA FOOTER */}
 <section className="hero" style={{padding: '2.25rem 0', background: 'var(--ifm-background-surface-color)'}}>
   <div className="container" style={{textAlign: 'center'}}>
-    <h3 style={{marginBottom: ‘0.5rem'}}>Ready to build the next cloud solution?</h3>
-    <p style={{marginBottom: ‘1rem'}}>I look forward to exchanging ideas, collaborating, and exploring new opportunities.</p>
-    <div className="buttons" style={{display: ‘flex', gap: ‘0.75rem', justifyContent: ‘center', flexWrap: ‘wrap'}}>
+    <h3 style={{marginBottom: '0.5rem'}}>Ready to build the next cloud solution?</h3>
+    <p style={{marginBottom: '1rem'}}>I look forward to exchanging ideas, collaborating, and exploring new opportunities.</p>
+    <div className="buttons" style={{display: 'flex', gap: '0.75rem', justifyContent: 'center', flexWrap: 'wrap'}}>
       <Link className="button button--primary" to="mailto:brigitte_boehm@outlook.de">Get in touch</Link>
       <Link className="button button--secondary" to="/about">More about me</Link>
     </div>
