--- a/i18n/en/docusaurus-plugin-content-pages/about.mdx
+++ b/i18n/en/docusaurus-plugin-content-pages/about.mdx
@@ -8,7 +8,7 @@ import Link from '@docusaurus/Link';
 {/* Hero with claim */}
 <div className="hero hero--primary" style={{padding: '3rem 0'}}>
     <div className="container">
-        <h1 className="hero__title" style={{marginBottom: '0.5rem'}}>Hi, ich bin <strong>Brigitte</strong></h1>
+        <h1 className="hero__title" style={{marginBottom: '0.5rem'}}>Hi, I am <strong>Brigitte</strong></h1>
         <p className="hero__subtitle" style={{fontSize: '1.05rem', lineHeight: 1.6}}>
             💡 Cloud & Data Platform Engineer │ 🖥️ Backend (Java/Kotlin, Spring Boot) │ ☸️ Kubernetes │ ☁️ Azure │ 🔧 DevOps │ 🧩 GitOps
         </p>
